--- a/index.html
+++ b/index.html
@@ -179,20 +179,20 @@
         <div class="label">電話番号※必須</div>
         <input type="tel" id="phone" placeholder="電話番号を入力してください">
 
-        <label>ご来店回数※必須</label>
+        <div class="label">ご来店回数※必須</div>
         <div class="visit-buttons">
             <button type="button" id="firstVisit" onclick="selectVisit(this)">初めて</button>
             <button type="button" id="repeatVisit" onclick="selectVisit(this)">2回目以降</button>
         </div>
 
-        <label>症状※必須</label>
+        <div class="label">症状※必須</div>
         <div class="symptoms">
             <button type="button" onclick="selectSymptom(this)">軽症</button>
             <button type="button" onclick="selectSymptom(this)">中等症</button>
             <button type="button" onclick="selectSymptom(this)">重症</button>
         </div>
 
-        <label for="date1">希望日</label>
+        <div class="label">希望日</div>
         <div class="calendar-container">
             <div class="week-button-container">
                 <button class="week-button" onclick="previousWeek()">前の週</button>
@@ -223,7 +223,7 @@
             </div>
         </div>
 
-        <label for="message">メッセージ（質問等お気軽にご記入ください）</label>
+        <div class="label">メッセージ（質問等お気軽にご記入ください）</div>
         <textarea id="message" rows="4" placeholder="メッセージを入力してください"></textarea>
 
         <button class="submit-button" onclick="submitForm()">予約を行う</button>
