--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 <body>
     <div class="container">
         <h1>予約フォーム2</h1>
-        <label for="name">お客様名※必須</label>
+        <div class="label">お客様名※必須</div>
         <input type="text" id="name" placeholder="お名前を入力してください">
 
         <div class="label">電話番号※必須</div>
